<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt_ros2_zaber</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pbajaj8@jh.edu">pranav</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rtt_ros2</depend>
  <depend>rtt_ros2_node</depend>
  <depend>rtt_ros2_geometry_msgs</depend>
  <depend>rtt_ros2_sensor_msgs</depend>
  <depend>rtt_ros2_std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
